# Luat_CSDK_Air724U

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.cmake  start.gdb
app/: CMakeLists.txt
app/OneWire/: CMakeLists.txt  OneWire.h
app/OneWire/dht11/: dht11.c
app/OneWire/ds18b20/: ds18b20.c  ds18b20.h
app/at_engine/: CMakeLists.txt
app/at_engine/inc/: at.h  at_baseCmd.h  at_baseTable.h  at_cmd.h
app/at_engine/src/: at.c  at_baseCmd.c  at_cmd.c  at_port.c
app/elua/: CMakeLists.txt  Kconfig  LUA解析器开源文档.md
app/elua/lib/: CMakeLists.txt
app/elua/lib/OneWire/: CMakeLists.txt  OneWire.c  OneWire.h
app/elua/lib/OneWire/dht11/: dht11.c  dht11.h
app/elua/lib/OneWire/ds18b20/: ds18b20.c
app/elua/lib/crypto/: CMakeLists.txt
app/elua/lib/crypto/include/: I_aes.h  aliyun_iot_common_datatype.h  crypto.h  md5_hmac.h  sha1_hmac.h  sha2.h  xxtea.h
app/elua/lib/crypto/src/: I_aes.c  crypto.c  md5_hmac.c  sha1_hmac.c  sha2.c  xxtea.c
app/elua/lib/iconv/: CMakeLists.txt
app/elua/lib/iconv/src/: gb2312_to_ucs2_table.h  ucs2_to_gb2312.c  utf8_to_ucs2.c
app/elua/lib/json/: CMakeLists.txt
app/elua/lib/json/src/: fpconv.c  fpconv.h  lua_cjson.c  strbuf.c
app/elua/lib/lpng/: CMakeLists.txt
app/elua/lib/lpng/include/: elua_png.h  elua_pngconf.h  pngdebug.h  pngpriv.h
app/elua/lib/lpng/src/: png.c  pngmem.c  pngpread.c  pngread.c  pngrutil.c
app/elua/lib/lzma/: CMakeLists.txt
app/elua/lib/lzma/include/: LzmaDec.h  Types.h
app/elua/lib/lzma/src/: LzmaDec.c  LzmaLib.c
app/elua/lib/pbc/: CMakeLists.txt
app/elua/lib/pbc/include/: alloc.h  context.h  pbc.h  proto.h  varint.h
app/elua/lib/pbc/src/: bootstrap.c  context.c  decode.c  pattern.c  pbc-lua.c  register.c  varint.c  wmessage.c
app/elua/lib/qr_encode/: CMakeLists.txt
app/elua/lib/qr_encode/include/: qr_config.h
app/elua/lib/qr_encode/src/: bitstream.c  mask.c  mmask.c  mqrspec.c  qrenc.c  qrencode.c  qrinput.c  qrspec.c  rscode.c  split.c
app/elua/lib/zlib/: CMakeLists.txt
app/elua/lib/zlib/include/: zconf.h  zlib.h
app/elua/lib/zlib/src/: adler32.c  deflate.c  gzguts.h  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inffast.h  inflate.c  inflate.h  inftrees.c  uncompr.c  zutil.c  zutil.h
app/elua/lib/zziplib/src/: file.c  fseeko.c  memdisk.c  mmapped.c  plugin.c  stat.c  write.c  zip.c
app/elua/lua/: CMakeLists.txt
app/elua/lua/include/: luaconf.h
app/elua/lua/src/: lapi.c  lauxlib.c  lbaselib.c  linit.c  liolib.c  llex.c  lmathlib.c  loadlib.c  lobject.c  lobject.h  lstate.c  lstrlib.c  lua.c  lzio.h
app/elua/modules/: CMakeLists.txt
app/elua/modules/include/: auxmods.h  platform_ttsply.h
app/elua/modules/src/: adc.c  audio.c  bit.c  bitarray.c  bluetooth.c  cpu.c  disp.c  factory.c  gpio_i2c.c  gps.c  hrsensor.c  i2c.c  l_uart.c  luaOneWire.c  luaiconv.c  luazip.c  lvgl.c  lzlib.c  pio.c  pmd.c  pwm.c  qr_encode.c  rtos.c  spi.c  tcpipsock.c  ttsply.c  watchdog.c  wifi.c
app/elua/newlib/: CMakeLists.txt
app/elua/newlib/include/: devman.h  genstd.h
app/elua/newlib/libc/: CMakeLists.txt
app/elua/newlib/libc/include/: _types.h  btea.h  (+17 more)
app/elua/newlib/src/: devman.c  genstd.c  stubs.c
app/elua/platform/: CMakeLists.txt
app/elua/platform/include/: crc.h  dlmalloc.h  lplatform.h  platform.h  platform_AW9523B.h  platform_SLI3108.h  platform_audio.h  platform_bluetooth.h  platform_camera.h  platform_disp.h  platform_gps.h  platform_hrsensor.h  platform_i2c.h  platform_lcd.h  platform_malloc.h  platform_pmd.h  platform_rtos.h  platform_spi.h  preload.h  ut_md5.h
app/elua/platform/openat/: CMakeLists.txt
app/elua/platform/src/: buf.c  common.c  common_disp.c  common_tmr.c  common_uart.c  crc.c  dlmalloc.c  elua_int.c  preload.c  ut_md5.c  一级汉字3755.txt  中文标点符号.txt  二级汉字.txt
app/elua/platform/win32/: 模拟器代码调试说明.txt
app/elua/res/: CMakeLists.txt
app/elua/res/src/: res.c
app/elua/shell/: CMakeLists.txt
app/elua/shell/include/: ini_parser.h
app/elua/shell/src/: ini_parser.c  logo_bmp.h  logo_bmp2.h  shell.c
app/elua/user/: CMakeLists.txt  elua_main.c
app/ftp/: CMakeLists.txt
app/ftp/inc/: ftppal.h
app/ftp/src/: ftplib.c
app/http/: CMakeLists.txt
app/http/inc/: HTTPClient.h  HTTPClientAuth.h  HTTPClientCommon.h  HTTPClientString.h  HTTPClientWrapper.h  am_openat_httpclient.h
app/http/src/: HTTPClient.c  HTTPClientAuth.c  HTTPClientString.c  HTTPClientWrapper.c  wm_httpclient_task.c
app/librtmp/: CMakeLists.txt
app/librtmp/inc/: common_fit.h  dh.h  handshake.h  log.h  rtmp.h  rtmp_sys.h  sha2.h  tls_client.h
app/librtmp/src/: amf.c  hashswf.c  log.c  rtmp.c  sha2.c  tls_client.c
app/littlevgl/: CMakeLists.txt  lv_conf.h  lv_examples.h
app/littlevgl/include/: lv_gui_config.h  lv_gui_main.h
app/littlevgl/lv_port/: lv_gui_example1.c  lv_gui_example2.c  lv_gui_main.c
app/littlevgl/lvgl/: lv_ex_conf.h
app/mbedtls/: CMakeLists.txt
app/mbedtls/configs/: config-ccm-psk-tls1_2.h
app/mbedtls/include/: mbedtls_config.h.in
app/mbedtls/include/mbedtls/: debug.h  net_sockets.h  platform.h
app/mqtt/: CMakeLists.txt
app/mqtt/src/: mqttlib.c
app/oled_ssd1306/: CMakeLists.txt
app/oled_ssd1306/inc/: oled.h  oledfont.h
app/oled_ssd1306/src/: oled.c
app/sms/: CMakeLists.txt
app/sms/inc/: am_openat_sms.h  gb2312_to_ucs2_table.h  ucs2_to_gb2312_table.h
app/sms/src/: sms.c
app/ssl/: CMakeLists.txt
app/ssl/inc/: os_int.h  os_port.h  pal_common.h  tls1.h  tls_config.h
app/ssl/src/: asn1.c  bigint.c  loader.c  os_port.c  p12.c  pal_ssl.c  rand.c  rsa.c  sha512.c  ssllib.c  tls1.c  tls1_clnt.c  x509.c
demo/StaticLibrary/: CMakeLists.txt  demo_StaticLibrary.c
demo/StaticLibrary/HelloWorld/: CMakeLists.txt
demo/StaticLibrary/HelloWorld/inc/: HelloWorld.h
demo/StaticLibrary/HelloWorld/src/: HelloWorld.c
demo/coreTest/: CMakeLists.txt  coreTest.c  测试说明.md
demo/coreTest/Testlib/: adc.c  datetime.c  flash.c  fs.c  ftp.c  gsmloc.c  http.c  network.c  pmd.c  ril.c  ril.h  socket.c  tts.c  vat.c  zbar.c  zbar.h  zbar_camera.c  zbar_lcd.c
demo/fotaNew/: CMakeLists.txt  demo_fotaNew.c  demo_fotaParse.c  demo_fotaParse.h
(+730 files in other folders)
