if(CONFIG_APPIMG_LOAD_FLASH)
add_appimg(${target} ${flash_ldscript} demo_fotaNew.c demo_fotaParse.c)
else(CONFIG_APPIMG_LOAD_FLASH)
add_appimg(${target} ${file_ldscript} demo_fotaNew.c demo_fotaParse.c)
endif()
target_include_directories(${target} PRIVATE ../components/ril/inc)
target_link_libraries(${target} PRIVATE ril)